hot fix align paginator

--- a/css/components/ui/paginator.scss
+++ b/css/components/ui/paginator.scss
@@ -1,4 +1,5 @@
 .c-paginator {
+  display: flex;
   overflow: hidden;
   margin: $space-1 * 2 0 0;
 
